--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
+[submodule "bundle/vim-peepopen"]
+	path = bundle/vim-peepopen
+	url = git://github.com/shemerey/vim-peepopen.git
