--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/vim-peepopen"]
 	path = bundle/vim-peepopen
 	url = git://github.com/shemerey/vim-peepopen.git
+[submodule "bundle/yaml-vim"]
+	path = bundle/yaml-vim
+	url = git://github.com/ingydotnet/yaml-vim.git
