--- a/.gitmodules
+++ b/.gitmodules
@@ -42,7 +42,7 @@
 	url = git://github.com/tpope/vim-fugitive.git
 [submodule "bundle/vim-powerline"]
 	path = bundle/vim-powerline
-	url = git@github.com:jamiebikies/vim-powerline.git
+        url = git://github.com/jamiebikies/vim-powerline.git
 [submodule "bundle/vim-jst"]
 	path = bundle/vim-jst
 	url = git://github.com/briancollins/vim-jst.git
