--- a/.gitmodules
+++ b/.gitmodules
@@ -57,7 +57,7 @@
 	url = git://github.com/edsono/vim-matchit.git
 [submodule "bundle/greplace"]
 	path = bundle/greplace
-	url = git://github.com/jamiebikies/greplace.vim.git
+	url = git@github.com:jamiebikies/greplace.vim.git
 [submodule "bundle/vim-surround"]
 	path = bundle/vim-surround
 	url = git://github.com/tpope/vim-surround.git
