--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "bundle/vim-ember-hbs"]
 	path = bundle/vim-ember-hbs
 	url = git@github.com:joukevandermaas/vim-ember-hbs
+[submodule "bundle/powerline"]
+	path = bundle/powerline
+	url = https://github.com/powerline/powerline
