--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,15 @@
 [submodule "bundle/powerline"]
 	path = bundle/powerline
 	url = https://github.com/powerline/powerline
+[submodule "bundle/dracula-theme"]
+	path = bundle/dracula-theme
+	url = git@github.com:dracula/vim.git
+[submodule "/Users/jgilgen/.vim/bundle/gruvbox"]
+	path = /Users/jgilgen/.vim/bundle/gruvbox
+	url = https://github.com/morhetz/gruvbox.git
+[submodule "bundle/onehalf"]
+	path = bundle/onehalf
+	url = https://github.com/sonph/onehalf
+[submodule "bundle/atom-dark"]
+	path = bundle/atom-dark
+	url = https://github.com/gosukiwi/vim-atom-dark
