--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "bundle/vim-closetag"]
 	path = bundle/vim-closetag
 	url = https://github.com/alvan/vim-closetag
+[submodule "bundle/vim-terragrunt"]
+	path = bundle/vim-terragrunt
+	url = https://github.com/yorinasub17/vim-terragrunt.git
